# spam-shield

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
app/model/: predictor.py  trainer.py
app/routes/: predict.py
app/templates/: index.html
frontend/: index.html  vercel.json
