[project]
name = "spamshield"
version = "1.0.0"
description = "ML-powered spam email detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "python-multipart==0.0.12",
    "jinja2==3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
